<resources>
    <string name="app_name">PracticaPelicula_RosalesXimena</string>
    <string name="uptown_girls">Uptown Girls</string>
    <string name="rentar">Rentar</string>
    <string name="comprar">Comprar</string>
    <string name="_6_3_10">6,3/10</string>
    <string name="_51mil">51mil</string>
    <string name="sinopsis">Molly Gunn, la despreocupada hija de una leyenda del rock fallecida, se ve obligada a buscar trabajo cuando su manager le roba el dinero. Como niñera de Ray —la precoz y a menudo ignorada hija de un ejecutivo musical—, aprende lo que significa ser adulta mientras le enseña a Ray a ser una niña.</string>
    <string name="g_nero">Género</string>
    <string name="romance">Romance</string>
    <string name="comedia">Comedia</string>
    <string name="drama">Drama</string>
    <string name="melodrama">Melodrama</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasenia_olvidada">¿Olvidaste la contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">¿No tienes cuenta? Regístrate</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
</resources>