<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="412dp"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_ug" />

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="145dp"
        android:layout_height="213dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="128dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_ug" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/uptown_girls"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeader" />

    <ImageView
        android:id="@+id/ivDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/ivHeader"
        app:srcCompat="@drawable/baseline_save_alt_24" />

    <Button
        android:id="@+id/btnRentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:text="@string/rentar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/light_purple"
        android:text="@string/comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStar" />

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_6_3_10"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="40dp"
        android:text="@string/_51mil"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintStart_toEndOf="@+id/ivStar" />

    <TextView
        android:id="@+id/tvSinopsis"
        android:layout_width="341dp"
        android:layout_height="105dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:text="@string/sinopsis"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/g_nero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRentar" />

    <TextView
        android:id="@+id/tvRomance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="27dp"
        android:text="@string/romance"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/tvGenero"
        app:layout_constraintTop_toBottomOf="@+id/btnRentar" />

    <TextView
        android:id="@+id/tvComedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="27dp"
        android:text="@string/comedia"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/tvRomance"
        app:layout_constraintTop_toBottomOf="@+id/btnComprar" />

    <TextView
        android:id="@+id/tvDrama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/drama"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/tvComedia"
        app:layout_constraintTop_toBottomOf="@+id/btnComprar" />

    <TextView
        android:id="@+id/tvMelodrama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/melodrama"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/tvDrama"
        app:layout_constraintTop_toBottomOf="@+id/btnComprar" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSinopsis"
        app:srcCompat="@drawable/like" />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSinopsis"
        app:srcCompat="@drawable/heart" />

</androidx.constraintlayout.widget.ConstraintLayout>